# kino

./: .gitignore  CMakeLists.txt  KINO.md  README.md  partitions.csv  sdkconfig
companion/: codex_agents.py  com.deepxanshu.kino-companion.plist  set_wifi_pass.py
docs/: magic-battery-preview.html  magic-battery-segment-options.html  magic-current-ui-preview.html  ui-interaction-review.md
main/: CMakeLists.txt  Magic-Stick.cpp  StackChan-RemoteControl-ESPNow.cpp  StickC-JoyMic.cpp  agents_model.c  agents_model.h  agents_net.c  agents_net.h  agents_proto.c  agents_proto.h  agents_serial.c  agents_serial.h  app_state.c  app_state.h  button_action.c  button_action.h  device_mode.c  device_mode.h  idf_component.yml  lvgl_port.cpp  lvgl_port.h  wifi_config.h.example  wifi_conn.c  wifi_conn.h
main/bluetooth/: bt_hid_mouse.c  bt_hid_mouse.h  bt_input.c  bt_input.h  bt_pairing_status.c  bt_pairing_status.h
main/joystick/: joyc_button.c  joyc_button.h  joyc_i2c_bridge.cpp  joyc_i2c_bridge.h  joyc_soft_i2c.c  joyc_soft_i2c.h  joystick_basic.h  joystick_handle.c  joystick_handle.h  mouse_controller.c  mouse_controller.h
main/mic/: mic_handle.cpp  mic_handle.h  mic_spectrum.c  mic_spectrum.h
main/ui/: ui.c  ui.h  ui_agents_screen.c  ui_agents_screen.h  ui_imu_screen.c  ui_imu_screen.h  ui_mic_screen.c  ui_mic_screen.h  ui_running_screen.c  ui_running_screen.h  ui_setup_screen.c  ui_setup_screen.h  ui_theme.c  ui_theme.h
test/: test_bt_hid_reports.c  test_bt_pairing_status.c  test_button_action.c  test_joyc_button.c  test_mic_spectrum.c  test_mouse_controller.c
